# PROBE-descriptor

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py  retrieval_demo.py
probe/: __init__.py  probe.py
